# cifter

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cli.md  data-model.md  output-format.md  overview.md  path-route-dsl.md  performance.md  pipeline.md  release.md  route-dsl.md
docs/specs/: configuration.md  overview.md  path-route-dsl.md  release.md  route-dsl.md
docs/specs/data-model/: overview.md
docs/specs/pipeline/: overview.md
examples/: demo.c
examples/multi_input/: alpha.c  beta.cpp  targets.txt
examples/quickstart/: decide_mode.c
examples/showcase/c/: app_context.h  control_flow.c  preprocess.c
examples/showcase/cpp/: member_workflow.cpp  route_cases.cpp
src/cifter/: __init__.py  __main__.py  cli.py  errors.py  extract_flow.py  extract_function.py  extract_path.py  extract_route.py  model.py  omission.py  parser.py  preprocessor.py  render.py  render_json.py  render_text.py  run.py  tree_helpers.py  version.py
tests/: support.py  test_check_dist.py  test_cli.py  test_commands_v1.py  test_examples_smoke.py  test_flow.py  test_install_smoke.py  test_output_v1.py  test_parser.py  test_parser_preprocessor_v1.py  test_path.py  test_preprocessor.py  test_render.py  test_route_dsl.py  test_route_infer.py
tools/: benchmark_phase3.py  check_dist.py  check_release.py  install_smoke.py
