[project]
name = "cifter-cli"
version = "0.3.0"
description = "C/C++ の関数実装を抽出する軽量 CLI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "t-kenji", email = "protect.2501@gmail.com" }
]
requires-python = ">=3.12"
keywords = [
    "c",
    "c++",
    "cpp",
    "cli",
    "tree-sitter",
    "source-extraction",
    "static-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Topic :: Software Development",
]
dependencies = [
    "pcpp>=1.30",
    "rich>=14.3.3",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-cpp>=0.23.4",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/t-kenji/cifter"
Repository = "https://github.com/t-kenji/cifter"
Issues = "https://github.com/t-kenji/cifter/issues"
Changelog = "https://github.com/t-kenji/cifter/blob/main/CHANGELOG.md"

[project.scripts]
cift = "cifter:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cifter"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["examples/*"]

[tool.ruff.lint]
extend-select = [
    "B",
    "I",
    "RUF",
    "SIM",
    "UP"
]

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.src]
exclude = ["examples/*"]
